objects/UNITY_Service_Contract__c.object
<CustomObject>
    <fields>
        <fullName>UNITY_Preventative_Maintenance_Frequency__c</fullName>
        <label>Preventative Maintenance Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Required_Documentation__c</fullName>
        <label>Required Documentation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Check Request Form</fullName>
                </value>
                <value>
                    <fullName>Completed Survey</fullName>
                </value>
                <value>
                    <fullName>Copy of Supplier Parts</fullName>
                </value>
                <value>
                    <fullName>Credit Card Authorization</fullName>
                </value>
                <value>
                    <fullName>Customer Correspondence</fullName>
                </value>
                <value>
                    <fullName>Customer-Specific Service Report Sign-Off</fullName>
                </value>
                <value>
                    <fullName>Damage &amp; Abuse - Before &amp; After Pictures</fullName>
                </value>
                <value>
                    <fullName>Deposit Check</fullName>
                </value>
                <value>
                    <fullName>IVR Check in and Check out (Labor)</fullName>
                </value>
                <value>
                    <fullName>Lien Waiver</fullName>
                </value>
                <value>
                    <fullName>PM Checklist completed</fullName>
                </value>
                <value>
                    <fullName>PM Failures</fullName>
                </value>
                <value>
                    <fullName>Shipping Documents</fullName>
                </value>
                <value>
                    <fullName>Vendor&apos;s Estimate</fullName>
                </value>
                <value>
                    <fullName>Vendor&apos;s Invoice</fullName>
                </value>
                <value>
                    <fullName>Vendor Correspondence</fullName>
                </value>
                <value>
                    <fullName>W-9</fullName>
                </value>
                <value>
                    <fullName>Walmart - Ready to Invoice Still needs Paperwork</fullName>
                </value>
                <value>
                    <fullName>Warranty information</fullName>
                </value>
                <value>
                    <fullName>Work Acknowledgment Form (Service Sign-Off)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Sales_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Saturday_Multiplier__c</fullName>
        <label>Saturday Multiplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Overtime</fullName>
                    <default>true</default>
                    <label>Overtime</label>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Saturday_No_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday No Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Saturday_OT_End_Time__c</fullName>
        <label>Saturday Regular End Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Saturday_OT_Start_Time__c</fullName>
        <label>Saturday Regular Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_ServiceReport_Template__c</fullName>
        <label>Service Report Template</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Service_Contract_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>UNITY Service Contract Ext Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UNITY_Signature_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether Customer Signature is mandatory for WO</description>
        <label>Signature Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Signature_Template__c</fullName>
        <label>Signature Template</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Sunday_Multiplier__c</fullName>
        <label>Sunday Multiplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Overtime</fullName>
                    <default>true</default>
                    <label>Overtime</label>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Sunday_No_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday No Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Sunday_OT_End_Time__c</fullName>
        <label>Sunday Regular End Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Sunday_OT_Start_Time__c</fullName>
        <label>Sunday Regular Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Termination_Term_Days__c</fullName>
        <label>Termination Term (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UNITY_Thursday_Multiplier__c</fullName>
        <label>Thursday Multiplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Overtime</fullName>
                    <default>true</default>
                    <label>Overtime</label>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Thursday_No_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday No Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Thursday_OT_End_Time__c</fullName>
        <label>Thursday Regular End Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Thursday_OT_Start_Time__c</fullName>
        <label>Thursday Regular Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Trip_Charge_Type__c</fullName>
        <label>Trip Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
                <value>
                    <fullName>Hourly Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Trip_Charge__c</fullName>
        <label>Trip Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNITY_Tuesday_Multiplier__c</fullName>
        <label>Tuesday Multiplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Overtime</fullName>
                    <default>true</default>
                    <label>Overtime</label>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Tuesday_No_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuesday No Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Tuesday_OT_End_Time__c</fullName>
        <label>Tuesday Regular End Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Tuesday_OT_Start_Time__c</fullName>
        <label>Tuesday Regular Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Wednesday_Multiplier__c</fullName>
        <label>Wednesday Multiplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Overtime</fullName>
                    <default>true</default>
                    <label>Overtime</label>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Wednesday_No_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wednesday No Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNITY_Wednesday_OT_End_Time__c</fullName>
        <label>Wednesday Regular End Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Wednesday_OT_Start_Time__c</fullName>
        <label>Wednesday Regular Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Work_Order_Delivery_Method__c</fullName>
        <label>Case Delivery Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Web-Portal</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Miner Customer Community</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Written_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Written Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UNTIY_Holiday__c</fullName>
        <description>Holiday Multiplier</description>
        <label>Holiday</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Service Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UNITY_Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UNITY_Contract_Sub_type__c</columns>
        <columns>UNITY_IS_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MNS_Customer_Service_Contracts</fullName>
        <columns>NAME</columns>
        <columns>UNITY_Account__c</columns>
        <columns>UNITY_Default_NTE__c</columns>
        <columns>UNITY_Default_Labor_Rate__c</columns>
        <columns>UNITY_Trip_Charge__c</columns>
        <columns>UNITY_Trip_Charge_Type__c</columns>
        <columns>UNITY_OT_Travel_Multiplier__c</columns>
        <columns>UNITY_OT_Multiplier__c</columns>
        <columns>UNITY_Holiday_Travel_Multiplier__c</columns>
        <columns>UNITY_Holiday_Multiplier__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>UNITY_Service_Contract__c.UNITY_Service_Request</value>
        </filters>
        <filters>
            <field>UNITY_BU_MNS_SC_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>UNITY_Account_Record_Type__c</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <label>MNS Customer Service Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Vendor_Service_Contracts</fullName>
        <columns>NAME</columns>
        <columns>UNITY_Account__c</columns>
        <columns>UNITY_IS_Active__c</columns>
        <columns>UNITY_Default_Labor_Rate__c</columns>
        <columns>UNITY_Default_NTE__c</columns>
        <columns>UNITY_Trip_Charge__c</columns>
        <columns>UNITY_Trip_Charge_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UNITY_Account_Record_Type__c</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filters>
        <label>Vendor Service Contracts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Service Contract ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Contracts</pluralLabel>
    <recordTypes>
        <fullName>UNITY_Preventative_Maintenance</fullName>
        <active>true</active>
        <description>UNITY Preventative Maintenance Service Contract</description>
        <label>Preventative Maintenance</label>
    </recordTypes>
    <recordTypes>
        <fullName>UNITY_Project_Management</fullName>
        <active>true</active>
        <description>Unity Project Management Service Contract</description>
        <label>Project Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>UNITY_Service_Request</fullName>
        <active>true</active>
        <description>UNITY Service Request Service Contract</description>
        <label>Service Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>UNITY_Site_Survey</fullName>
        <active>true</active>
        <description>UNITY Site Survey Service Contract</description>
        <label>Site Survey</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>UNITY_Business_Hours_Friday_OT_End</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(UNITY_Friday_OT_End_Time__c)),NOT(REGEX( UNITY_Friday_OT_End_Time__c , &quot;(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;)))</errorConditionFormula>
        <errorDisplayField>UNITY_Friday_OT_End_Time__c</errorDisplayField>
        <errorMessage>Time must be in HH:MM format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Business_Hours_Friday_OT_Start</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(UNITY_Friday_OT_Start_Time__c)),NOT(REGEX( UNITY_Friday_OT_Start_Time__c , &quot;(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;)))</errorConditionFormula>
        <errorDisplayField>UNITY_Friday_OT_Start_Time__c</errorDisplayField>
        <errorMessage>Time must be in HH:MM format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Business_Hours_Monday_OT_End</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(UNITY_Monday_OT_End_Time__c)),NOT(REGEX( UNITY_Monday_OT_End_Time__c , &quot;(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;)))</errorConditionFormula>
        <errorDisplayField>UNITY_Monday_OT_End_Time__c</errorDisplayField>
        <errorMessage>Time must be in HH:MM format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Business_Hours_Monday_OT_Start</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(UNITY_Monday_OT_Start_Time__c)),NOT(REGEX( UNITY_Monday_OT_Start_Time__c , &quot;(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;)))</errorConditionFormula>
        <errorDisplayField>UNITY_Monday_OT_Start_Time__c</errorDisplayField>
        <errorMessage>Time must be in HH:MM format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Business_Hours_Saturday_OT_End</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(UNITY_Saturday_OT_End_Time__c)),NOT(REGEX( UNITY_Saturday_OT_End_Time__c , &quot;(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;)))</errorConditionFormula>
        <errorDisplayField>UNITY_Saturday_OT_End_Time__c</errorDisplayField>
        <errorMessage>Time must be in HH:MM format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Business_Hours_Saturday_OT_Start</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(UNITY_Saturday_OT_Start_Time__c)),NOT(REGEX( UNITY_Saturday_OT_Start_Time__c , &quot;(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;)))</errorConditionFormula>
        <errorDisplayField>UNITY_Saturday_OT_Start_Time__c</errorDisplayField>
        <errorMessage>Time must be in HH:MM format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Business_Hours_Sunday_OT_End</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(UNITY_Sunday_OT_End_Time__c)),NOT(REGEX( UNITY_Sunday_OT_End_Time__c , &quot;(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;)))</errorConditionFormula>
        <errorDisplayField>UNITY_Sunday_OT_End_Time__c</errorDisplayField>
        <errorMessage>Time must be in HH:MM format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Business_Hours_Sunday_OT_Start</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(UNITY_Sunday_OT_Start_Time__c)),NOT(REGEX( UNITY_Sunday_OT_Start_Time__c , &quot;(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;)))</errorConditionFormula>
        <errorDisplayField>UNITY_Sunday_OT_Start_Time__c</errorDisplayField>
        <errorMessage>Time must be in HH:MM format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Business_Hours_Thursday_OT_End</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(UNITY_Thursday_OT_End_Time__c)),NOT(REGEX( UNITY_Thursday_OT_End_Time__c , &quot;(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;)))</errorConditionFormula>
        <errorDisplayField>UNITY_Thursday_OT_End_Time__c</errorDisplayField>
        <errorMessage>Time must be in HH:MM format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Business_Hours_Thursday_OT_Start</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(UNITY_Thursday_OT_Start_Time__c)),NOT(REGEX( UNITY_Thursday_OT_Start_Time__c , &quot;(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;)))</errorConditionFormula>
        <errorDisplayField>UNITY_Thursday_OT_Start_Time__c</errorDisplayField>
        <errorMessage>Time must be in HH:MM format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Business_Hours_Tuesday_OT_End</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(UNITY_Tuesday_OT_End_Time__c)),NOT(REGEX( UNITY_Tuesday_OT_End_Time__c , &quot;(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;)))</errorConditionFormula>
        <errorDisplayField>UNITY_Tuesday_OT_End_Time__c</errorDisplayField>
        <errorMessage>Time must be in HH:MM format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Business_Hours_Tuesday_OT_Start</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(UNITY_Tuesday_OT_Start_Time__c)),NOT(REGEX( UNITY_Tuesday_OT_Start_Time__c , &quot;(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;)))</errorConditionFormula>
        <errorDisplayField>UNITY_Tuesday_OT_Start_Time__c</errorDisplayField>
        <errorMessage>Time must be in HH:MM format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Business_Hours_Wednesday_OT_End</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(UNITY_Wednesday_OT_End_Time__c)),NOT(REGEX( UNITY_Wednesday_OT_End_Time__c , &quot;(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;)))</errorConditionFormula>
        <errorDisplayField>UNITY_Wednesday_OT_End_Time__c</errorDisplayField>
        <errorMessage>Time must be in HH:MM format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UNITY_Business_Hours_Wednesday_OT_Start</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(UNITY_Wednesday_OT_Start_Time__c)),NOT(REGEX( UNITY_Wednesday_OT_Start_Time__c , &quot;(0[0-9]|1[0-9]|2[0-3]):[0-5][0-9]$&quot;)))</errorConditionFormula>
        <errorDisplayField>UNITY_Wednesday_OT_Start_Time__c</errorDisplayField>
        <errorMessage>Time must be in HH:MM format</errorMessage>
    </validationRules>
</CustomObject>